# ia-invest

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  PLANO_BACEN_SELIC_IPCA.md  README.md  RENDA_FIXA.md  TEST_STRATEGY.md  WALLET_MODEL.md  ia_invest.db  portfolio.example.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: README.md  avenue-apex-download.md  primeiros-passos.md  renda-fixa.md
domain/: __init__.py  asset_catalog.py  concentration_service.py  deduplication.py  dividends_service.py  fixed_income.py  fixed_income_rates.py  fixed_income_summary_service.py  fixed_income_tax.py  fixed_income_valuation.py  fx_rates.py  members.py  models.py  monthly_equity_service.py  performance_service.py  portfolio_alerts_service.py  portfolio_service.py  position_service.py  position_valuation_service.py  previdencia.py
extractors/: __init__.py  avenue_apex_pdf.py  b3_csv.py  b3_movimentacao_xlsx.py  b3_pdf.py  base.py  binance_csv.py  binance_simple_earn.py  broker_csv.py  cache.py  gorila_b3_xlsx.py  gorila_base.py  gorila_xlsx.py  ia_invest_export_csv.py  ia_invest_previdencia_export_csv.py  manual_dividends_csv.py  manual_xlsx_b3.py  manual_xlsx_base.py  manual_xlsx_crypto.py  previdencia_ibm_pdf.py
frontend/: README.md  package-lock.json  package.json
mcp_server/: http_api.py  server.py
normalizers/: __init__.py  base.py  binance.py  fixed_income_csv.py  operations.py  validator.py
scripts/: adjust_asset_balance.py  bootstrap_asset_metadata.py  bootstrap_members_from_fs.py  check_asset_balance.py  create_member.py  init_db.py  (+15 more)
(+271 files in other folders)
